Prevent the "About Bloomington" link from bleeding through its containing box.

--- a/scss/modules/home/_about.scss
+++ b/scss/modules/home/_about.scss
@@ -22,6 +22,7 @@
         @include grid-12col();
         color: #fff;
         font-size: (20rem/16);
+        margin: 1.5em 0 .75em;
         text-align: center;
     }
 
@@ -30,7 +31,8 @@
         box-sizing: border-box;
         color: #fff;
         font-size: (14rem/16);
-        margin: 0 1rem;
+        margin: 2em 1em;
+        overflow: hidden;
         padding: 1rem;
 
         &:before {
